# AdsServer

./: Cargo.toml  config.hjson  test  test2
ads_networking/: Cargo.toml
ads_networking/src/: client.rs  lib.rs
ads_networking/src/codec/: types.rs
ads_types/: Cargo.toml
ads_types/src/: helper.rs  lib.rs
json_diff/: Cargo.toml
json_diff/src/: lib.rs
settings/: Cargo.toml
settings/src/: lib.rs
src/: json_diff.rs  main.rs  ws.rs  ws_ads.rs
src/networking/: client.rs  mod.rs  types.rs
src/networking/codec/: mod.rs  types.rs
src/old/networking/: mod.rs  types.rs
src/settings/: map_deserialize.rs  mod.rs
src/types/: helper.rs  mod.rs
src/xml_to_struct/: helper.rs  mod.rs  types.rs
versions/: v14.tpy
xml_to_struct/: Cargo.toml
xml_to_struct/src/: helper.rs  lib.rs
