[package]
name = "ads_server"
version = "0.1.0"
authors = ["binder-lukas <binder.lukas@outlook.com>"]

[dependencies]
clap = "*"
#serde = "*"
serde_json = "*"
#byteorder = "*"
#num-traits = "*"
#quickxml_to_serde = "*"
log = "*"
fern = "*"
chrono = "*"
config = "*"
#crossbeam = "*"
#crossbeam-channel = "*"
actix = "0.7"
actix-web = { git = "https://github.com/actix/actix-web.git" }
chashmap = "2.2.0"
#bus = "*"
#nom = "*"
ads_networking = { path = "./ads_networking" }
ads_types = { path = "./ads_types" }
json_diff = { path = "./json_diff" }
settings = { path = "./settings" }
xml_to_struct = { path = "./xml_to_struct" }