[package]
name = "ads_server"
version = "0.1.0"
authors = ["binder-lukas <binder.lukas@outlook.com>"]

[dependencies]
clap = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
nom = "*"
log = "*"
fern = "*"
chrono = "*"
config = "*"
#crossbeam = "*"
#crossbeam-channel = "*"
actix = "0.7"
actix-web = { git = "https://github.com/actix/actix-web.git" }
chashmap = "2.2.0"
rand = "0.5.4"
bytes = "0.4.8"
byteorder = "1.2.3"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
num-traits = "*"
quickxml_to_serde = "*"
