[package]
name = "ads_server"
version = "0.1.0"
authors = ["binder-lukas <binder.lukas@outlook.com>"]

[dependencies]
clap = "^2.32"
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
nom = "^4.0"
log = "*"
fern = "^0.5"
chrono = "*"
config = "^0.9"
#crossbeam = "*"
#crossbeam-channel = "*"
actix = "^0.7"
actix-web = "^0.7"
chashmap = "2.2.0"
rand = "0.5.4"
bytes = "^0.4"
byteorder = "^1.2"
futures = "^0.1"
tokio = "^0.1"
tokio-codec = "^0.1"
tokio-io = "^0.1"
tokio-tcp = "^0.1"
num-traits = "*"
quickxml_to_serde = "^0.3"