[package]
name = "ads_networking"
version = "0.1.0"
authors = ["binder-lukas <binder.lukas@outlook.com>"]

[dependencies]
rand = "0.5.4"
bytes = "0.4.8"
byteorder = "1.2.3"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
actix = "0.7.0"
ads_types = { path = "../ads_types" }